# med-lm-envs

./: .gitignore  README.md  medmcqa_token_count.py  pyproject.toml
configs/envs/: longhealth.yaml  longhealth_r1.yaml  longhealth_r2.yaml  longhealth_t1.yaml  longhealth_t1_r1.yaml  longhealth_t1_r2.yaml  longhealth_t2.yaml  longhealth_t2_r1.yaml  longhealth_t2_r2.yaml  m_arc.yaml  m_arc_r1.yaml  m_arc_r2.yaml  med_mcqa.yaml  med_mcqa_r1.yaml  med_mcqa_r2.yaml  medbullets.yaml  medbullets_op4.yaml  medbullets_op4_r1.yaml  medbullets_op4_r2.yaml  medbullets_op5.yaml  medbullets_op5_r1.yaml  medbullets_op5_r2.yaml  medbullets_r1.yaml  medbullets_r2.yaml  medcalc_bench.yaml  medconceptsqa.yaml  medconceptsqa_r1.yaml  medconceptsqa_r2.yaml  medconceptsqa_sample.yaml  medconceptsqa_sample_easy.yaml  medconceptsqa_sample_easy_r1.yaml  medconceptsqa_sample_easy_r2.yaml  medconceptsqa_sample_hard.yaml  medconceptsqa_sample_hard_r1.yaml  medconceptsqa_sample_hard_r2.yaml  medconceptsqa_sample_medium.yaml  medconceptsqa_sample_medium_r1.yaml  medconceptsqa_sample_medium_r2.yaml  medqa.yaml  medqa_r1.yaml  (+13 more)
environments/acibench/: Dataset Curation and Cleaning for Medarc Eval.md  README.md  acibench.py  dataset_curation_notes.md  pyproject.toml
environments/agentclinic/: README.md  agentclinic.py  llm_client.py
environments/agentclinic_medqa/: agentclinic_medqa.py  pyproject.toml
environments/biohopr/: README.md  biohopr.py  pyproject.toml
environments/careqa_mcq/: README.md  careqa_mcq.py  pyproject.toml
environments/careqa_openended/: README.md  careqa_openended.py  pyproject.toml
environments/healthbench/: README.md  hb_consensus_criteria.json  healthbench.py  pyproject.toml
environments/k_qa/: README.md  k_qa.py  prompts.py  pyproject.toml  questions_w_answers.jsonl
environments/k_qa_batched/: README.md  k_qa_batched.py  prompts.py  pyproject.toml
environments/longhealth/: longhealth.py  pyproject.toml
environments/m_arc/: README.md  m_arc.py  pyproject.toml
environments/med_dialog/: README.md  med_dialog.py  pyproject.toml
environments/med_mcqa/: README.md  med_mcqa.py  pyproject.toml
environments/medagentbench/: README.md  medagentbench.py  pyproject.toml
environments/medbullets/: README.md  medbullets.py  pyproject.toml
environments/medcalc-bench/: README.md  medcalc_bench.py
environments/medcalc_bench/: medcalc_bench.py
environments/medcasereasoning/: medcasereasoning.py
environments/medconceptsqa/: medconceptsqa.py  pyproject.toml
environments/medec/: README.md  medec.py  pyproject.toml
environments/medhalt/: README.md  medhalt.py  pyproject.toml  test_medhalt.py
environments/medqa/: medqa.py  pyproject.toml
environments/medredqa/: README.md  medredqa.py  pyproject.toml
environments/medredqa/factscore_judge/: atomic_facts.py  atomic_facts_generator.py  atomic_facts_judge.py
environments/medxpertqa/: README.md  medxpertqa.py  pyproject.toml
environments/metamedqa/: metamedqa.py  pyproject.toml
environments/mmlu_pro_health/: README.md  mmlu_pro_health.py  pyproject.toml
environments/pubmedqa/: pubmedqa.py  pyproject.toml  readme.md  test_pubmedqa.py
medarc_verifiers/: utils.py
medarc_verifiers/cli/: _benchmark_utils.py  benchmark.py  eval.py  export_parquet.py
medarc_verifiers/cli/utils/: reporting.py
medarc_verifiers/export/: __init__.py
medarc_verifiers/export/parquet/: __init__.py  aggregation.py  discovery.py  metadata.py  rows.py  schemas.py  writer.py
medarc_verifiers/rewards/: mcq_accuracy.py
medarc_verifiers/utils/: __init__.py  cli_env_args.py  download.py  randomize_mcq.py
outputs/evals/metamedqa--mistral-small-latest/0f17c9d8/: metadata.json  results.jsonl
outputs/evals/metamedqa--mistral-small-latest/5cd92dc9/: metadata.json  results.jsonl
outputs/evals/metamedqa--mistral-small-latest/66d31c5c/: metadata.json  results.jsonl
outputs/evals/metamedqa--mistral-small-latest/e91f8653/: metadata.json  results.jsonl
tests/: test_benchmark_cli.py  test_benchmark_matrix_expansion.py  test_cli_env_args.py  test_cli_eval.py  test_export_aggregation.py  test_export_discovery.py  test_export_metadata.py  test_export_rows.py  test_export_writer.py  test_json_parser.py  test_mcq_accuracy.py  test_randomize_mcq.py
