[project]
name = "medarc-k-qa_batched"
description = "same as k_qa but with ONE API call to check comprehensiveness and hallucinations"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "medarc-verifiers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["k_qa_batched.py", "prompts.py"]

[tool.prime.environment]
loader = "k_qa_batched:load_environment"
display_name = "K_QA_Batched"
visibility = "PUBLIC"

[tool.uv.sources]
medarc-verifiers = {git = "https://github.com/MedARC-AI/med-lm-envs"}
