[project]
name = "longhealth"
description = "LongHealth: A Question Answering Benchmark with Long Clinical Documents - 20 patients, 400 MCQ questions"
tags = ["medical", "long-context"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.5.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.prime.environment]
loader = "longhealth:load_environment"
display_name = "LongHealth"
visibility = "PUBLIC"
