[project]
name = "med_mcqa"
version = "0.1.1"
description = "Med MCQA medical multiple-choice evaluation environment"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.2.post0",
    "datasets>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["med_mcqa.py"]

[tool.prime.environment]
# lets Prime/vf-eval know where the loader lives in a flat repo
loader = "med_mcqa:load_environment"
display_name = "Med MCQA"
visibility = "PUBLIC"
