[project]
name = "medhalt"
description = "MedHALT evaluation environment for medical LLMs"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "verifiers",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

